webthrottle: fixed css issue to get rid of the scrollbars see #178

--- a/server/www/css/throttle.css
+++ b/server/www/css/throttle.css
@@ -73,6 +73,13 @@
   padding-right: 0.5rem;
 }
 
+html,
+body
+{
+  height: 100vh;
+  width: 100vw;
+}
+
 html
 {
   font-family: sans-serif;
@@ -85,12 +92,13 @@ body
   color: white;
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
 
 header
 {
+  flex-shrink: 0;
   padding: 0.5rem;
 }
 
@@ -110,7 +118,7 @@ header h1
 #body
 {
   position: relative;
-  height: 100%;
+  flex-grow: 1;
 }
 
 #settings
@@ -120,6 +128,10 @@ header h1
   background-color: #121212;
   width: 100%;
   height: 100%;
+}
+
+#settings div
+{
   padding: 0.5rem;
 }
 
@@ -128,32 +140,12 @@ header h1
   display: block;
 }
 
-#not-connected
+#body>div.status
 {
-  z-index: 2;
-  position: absolute;
   display: flex;
   align-items: center;
-  width: 100%;
+  justify-content: center;
   height: 100%;
-  padding: 0.5rem;
-}
-
-#no-world
-{
-  z-index: 1;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding: 0.5rem;
-}
-
-#not-connected div,
-#no-world div
-{
-  margin: 0 auto;
 }
 
 button.control,
